# Hunyuan3D-2-Unofficial

./: CITATION.cff  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
configs/: default.yaml
scripts/: smoke_test.py
